--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ plugins {
     id 'com.google.protobuf' version "${protobufPluginVersion}"
 }
 
-group = 'com.grpc'
+group = 'com.grpc.client'
 version = '0.0.1-SNAPSHOT'
 
 java {
