--- a/build.gradle
+++ b/build.gradle
@@ -34,18 +34,20 @@ repositories {
 }
 
 dependencies {
-    implementation 'net.devh:grpc-client-spring-boot-starter:3.1.0.RELEASE'
-
+    // Spring
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 
-    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
+    // Grpc
+    implementation 'net.devh:grpc-client-spring-boot-starter:3.1.0.RELEASE'
 
+    // Lombok
     annotationProcessor 'org.projectlombok:lombok'
     compileOnly 'org.projectlombok:lombok'
 
+    // MapStruct
     implementation 'org.mapstruct:mapstruct:1.6.0'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.0'
 
